Update pyproject.toml for proper package installation and gitignore test folders

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@ therapy_notes/
 processed/
 compliance_reports/
 
-# Test documents (keep test_docs for demo purposes)
-# test_docs/
+# Test documents
+test_docs/
+psychotherapy/test_docs/
 
 # Python
 __pycache__/
