--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,8 @@ check-compliance = "psychotherapy.therapy_compliance_processor:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["psychotherapy"]
+
 [tool.uv]
 dev-dependencies = []
